--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
+  - 7.0
+  - 7.1
+  - 7.2
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:1.0.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install
+  - composer install
 
 script:
   - phpunit --verbose --coverage-clover=coverage/coverage.clover
